--- a/index.html
+++ b/index.html
@@ -2,40 +2,39 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <script src="main.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
 </head>
 <body>
-    <main>
-        <div class="form-container">
-            <form id="form" class="form">
-                <h2>Register Here</h2>
-                <div class="form-control">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" placeholder="Create a username">
-                    <small>Error message</small>
-                </div>
-                <div class="form-control">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="example@domain.com">
-                    <small>Error message</small>
-                </div>
-                <div class="form-control">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Create a password">
-                    <small>Error message</small>
-                </div>
-                <div class="form-control">
-                    <label for="password2">Confirm Password</label>
-                    <input type="text" id="password2" placeholder="Confirm your password">
-                    <small>Error message</small>
-                </div>
-                <div class="button-div">
-                    <button type="submit">Submit</button>
-                </div>
-            </form>
-        </div>
-    </main>
+    <div class="form-container">
+        <form id="form" class="form">
+            <h2>Register Here</h2>
+            <div class="form-control">
+                <label for="username">Username</label>
+                <input type="text" id="username" placeholder="Create a username" required>
+                <small>Error message</small>
+            </div>
+            <div class="form-control">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="example@domain.com" required>
+                <small>Error message</small>
+            </div>
+            <div class="form-control">
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Create a password" required>
+                <small>Error message</small>
+            </div>
+            <div class="form-control">
+                <label for="password2">Confirm Password</label>
+                <input type="password" id="password2" placeholder="Confirm your password" required>
+                <small>Error message</small>
+            </div>
+            <div class="button-div">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
